fix gap in reviews

--- a/src/views/Reviews/Reviews.module.css
+++ b/src/views/Reviews/Reviews.module.css
@@ -3,7 +3,7 @@
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  gap: clamp(18px, 3vw, 30px);
+  gap: clamp(18px, 1.57vw, 30px);
 }
 
 @media screen and (max-width: 690px) {
